fix khttp test